...
              activeIcon: Icon(Icons.build_circle),
              label: 'Services',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.inventory_2_outlined),
              activeIcon: Icon(Icons.inventory_2),
              label: 'Assets',
            ),
          ],
        ),
      ),
    );
  }
...
